<resources>
    <string name="app_name">Students Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="txt_add_student">Add Student</string>
    <string name="txt_institute_name">Student Management</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_roll_name">Roll Number</string>
    <string name="txt_search">Search</string>
    <string name="txt_no_record">No Records Found</string>
    <string name="txt_dob">Date Of Birth</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_student_info">Student Information</string>
    <string name="txt_delete">Delete</string>


    <string name="title_activity_add_student">Add Student</string>

</resources>
