<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_institute_name"
        android:id="@+id/txtInstituteName"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="30dp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_student"
        android:id="@+id/btnAddStudent"
        android:layout_gravity="right"
        android:layout_marginTop="10dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSeachFirstName"
            android:hint="@string/txt_first_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSearchLastName"
            android:hint="@string/txt_last_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSearchRollNumber"
            android:hint="@string/txt_roll_name" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_search"
        android:id="@+id/txtSearchStudent"
        android:layout_gravity="right" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginTop="10dp" />

    <ListView
        android:id="@+id/listStudents"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:cacheColorHint="#00000000">
    </ListView>

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@android:style/TextAppearance.Large"
        android:gravity="center"
        android:text="@string/txt_no_record">

    </TextView>

</LinearLayout>
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txtInstituteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_institute_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/txt_add_student"
        android:onClick="goToAddStudent" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/vwWhenPopulated"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtSeachFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_first_name"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtSearchLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_last_name"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/txtSearchRollNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_roll_name"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/txtSearchStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/txt_search"
                android:onClick="searchRecords" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#000000" />

    </LinearLayout>




    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#A4C739"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />

    <TextView
        android:id="@+id/txtEmpty"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
    android:text="@string/txt_no_record">

    </TextView>

</LinearLayout>